--- a/main.css
+++ b/main.css
@@ -2,13 +2,28 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: whitesmoke;
+}
+
+button, input, body {
+    font-family: calibri;
+    font-size: 12pt;
+}
+
 #divContainer{
     display: grid;
-    height: 500px;
-    width: 960px;
+    margin: auto;
+    height: 800px;
+    width: 1200px;
     border: 1px solid lightgray;
-    /*grid-template-columns: auto;
-    grid-template-rows: auto;*/
+}
+
+#input-holder{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 25px;
 }
 
 .grid{
@@ -18,7 +33,6 @@
     height: 1fr;
 }
 
-button, input, body {
-    font-family: calibri;
-    font-size: 12pt;
+.button-size {
+    margin-left: 25px;
 }
